my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENDEFAULT/ENDEFAULT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENDEFAULT.dml:20:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENDEFAULT.dml:29:5: In bar
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENDEFAULT.dml:16:12: error ENDEFAULT: no default implementation
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENDEFAULT.dml:23:14: error ENDEFAULT: no default implementation
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENDEFAULT.dml:9:1: In foo
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENDEFAULT.dml:11:10: error ENDEFAULT: no default implementation
